--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body{
 .container{
     background-color: rgb(230, 175, 222);
     display: flex;
-    
     width: 800px;
     flex-direction:column;
     justify-content: center;
@@ -19,7 +18,7 @@ body{
     text-align: center;
     box-shadow: 0 0 5px black;
     overflow: hidden;
-    margin:20px 250px; 
+    margin:20px auto; 
 }
 #header{
     background-color: palevioletred;
@@ -86,7 +85,7 @@ li {
 @media (max-width: 480px) {
     .container {
         width: 95%;
-        max-width: 100%;
+        max-width: 100px;
     }
     
     img {
