--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,12 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0; 
-    height: auto;
     background-color:black;
 }
 
 .container{
     background-color: rgb(230, 175, 222);
     display: flex;
-    width: 800px;
     flex-direction:column;
     justify-content: center;
     align-items: center;
@@ -26,8 +24,13 @@ body{
     width: 800px;
 }
 
+#header h1{
+    font-size:xx-large;
+}
+
 img{
-    width: 150px ;
+    width: 170px ;
+    margin-top: 20px;
     justify-items:center;
     border-radius: 50% ;
     border: solid palevioletred;;
